@@ -167,7 +167,7 @@ class ProductFileServiceTest {
     MultipartFile file = createMockFile_InvalidFileType();
     ValidationResultDTO validationResultDTO = new ValidationResultDTO("KO","TEST");
     when(productFileValidator.validateFile(any(),anyString(),anyList(),anyInt())).thenReturn(validationResultDTO);
-    ProductFileResult res = productFileService.processFile(file, "cat","org","user","email");
+    ProductFileResult res = productFileService.uploadFile(file, "cat","org","user","email");
     assertEquals("KO", res.getStatus());
     assertEquals("TEST", res.getErrorKey());
   }
@@ -208,7 +208,7 @@ class ProductFileServiceTest {
       ProductFile savedProductFile = ProductFile.builder().id("123").build();
       when(productFileRepository.save(any())).thenReturn(savedProductFile);
 
-      ProductFileResult result = productFileService.processFile(file, "cookinghobs", "org1", "user1","email");
+      ProductFileResult result = productFileService.uploadFile(file, "cookinghobs", "org1", "user1","email");
 
       assertEquals("KO", result.getStatus());
       assertEquals(AssetRegisterConstants.UploadKeyConstant.REPORT_FORMAL_FILE_ERROR_KEY, result.getErrorKey());
@@ -275,7 +275,7 @@ class ProductFileServiceTest {
 
       when(fileStorageClient.upload(any(), any(), any())).thenReturn(null);
 
-      ProductFileResult res = productFileService.processFile(file, "cat", "org", "user","email");
+      ProductFileResult res = productFileService.uploadFile(file, "cat", "org", "user","email");
 
       assertEquals("OK", res.getStatus());
       assertNull(res.getErrorKey());
@@ -306,8 +306,8 @@ class ProductFileServiceTest {
     List<ProductBatchDTO> result = productFileService.getProductFilesByOrganizationId("org123");
 
     assertEquals(1, result.size());
-    assertEquals("file123", result.get(0).getProductFileId());
-    assertEquals("DISHWASHERS_file123.csv", result.get(0).getBatchName());
+    assertEquals("file123", result.getFirst().getProductFileId());
+    assertEquals("DISHWASHERS_file123.csv", result.getFirst().getBatchName());
   }
 
 }
